--- a/index.html
+++ b/index.html
@@ -3,105 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            background: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background: #222;
-            color: #fff;
-            padding: 2rem 0;
-            text-align: center;
-        }
-        nav {
-            margin-top: 1rem;
-        }
-        nav a {
-            color: #fff;
-            margin: 0 1rem;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .container {
-            max-width: 900px;
-            margin: 2rem auto;
-            background: #fff;
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-        }
-        h2 {
-            color: #222;
-            margin-top: 2rem;
-        }
-        .projects {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1.5rem;
-            margin-top: 1rem;
-        }
-        .project {
-            background: #f9f9f9;
-            padding: 1rem;
-            border-radius: 6px;
-            box-shadow: 0 1px 4px rgba(0,0,0,0.05);
-        }
-        footer {
-            text-align: center;
-            padding: 1rem 0;
-            background: #222;
-            color: #fff;
-            margin-top: 2rem;
-        }
-    </style>
+    <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>Your Name</h1>
-        <p>Web Developer & Designer</p>
-        <nav>
-            <a href="#about">About</a>
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
-    <div class="container">
-        <section id="about">
-            <h2>About Me</h2>
-            <p>
-                Welcome to my portfolio! I am a passionate web developer with experience in building modern, responsive websites and applications. I love turning ideas into reality using code.
-            </p>
-        </section>
-        <section id="projects">
-            <h2>Projects</h2>
-            <div class="projects">
-                <div class="project">
-                    <h3>Project One</h3>
-                    <p>A brief description of your first project. What technologies did you use? What problem did it solve?</p>
-                </div>
-                <div class="project">
-                    <h3>Project Two</h3>
-                    <p>A brief description of your second project. Highlight any unique features or challenges you overcame.</p>
-                </div>
-                <div class="project">
-                    <h3>Project Three</h3>
-                    <p>A brief description of your third project. Mention any collaboration or interesting results.</p>
-                </div>
-            </div>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>
-                Feel free to reach out via email: <a href="mailto:your.email@example.com">your.email@example.com</a>
-            </p>
-        </section>
-    </div>
-    <footer>
-        &copy; 2024 Your Name. All rights reserved.
-    </footer>
+     <section> <!--1st section-->
+        <div> 
+            <Header>
+                <nav>
+                    <a href="/code-1st-try/Home.html">Home</a>
+                    <a href="/code-1st-try/about.html">about</a>
+                    <a href="/code-1st-try/contact.html">contact</a>
+                    <button name="header button"> Lets tlak me</button>
+                </nav>
+            </Header>
+        </div>
+    
+        <div>
+            <h3>Hello,i'm</h3> <br>
+            <h1 >Freelancer Shihab</h1>
+            <h3>Digital Marketer & Web Designer</h3>
+            <p>My name is Md. Shihab Hossen. I am a digital marketer And social media manager & Web designer. Data entry, Lead Generation, Email Marketing, WordPress, SEO(ON-Page & Off-Page), Amazon SEO, Expert.
+
+</p>
+        </div>
+        <div>
+          <button><a href="#">Hire me</a> </button>
+           <button>="#">My Resume</a> </button>
+        </div>
+
+        <div>
+            <img src="/code-1st-try/image/IMG20250223144535.jpg">
+        </div>
+
+        <div>
+            <!-- count er part ta -->
+        </div>
+     </section>
+
+     <section> <!--2nd section-->
+        <div>
+            <!--Iamge Consol ad korte hoe-->
+
+        </div>
+
+     </section>
+
+
+     <section>
+        <div>
+            <h2>Professional </h2>
+            <h1>Problem Solutions </h1>
+            <h4>About me </h4>
+            <p>I am a professional Digital Marketer and Web Designer, dedicated to taking my clients’ businesses to new heights online. With over 5 years of experience in this industry, I started my journey as a freelancer, handling small projects on my own. Over time, through skill development, real-world experience, and client satisfaction, I now run a full-service digital marketing agency — where every project is handled with the same care and attention as if it were our own.</p>
+        </div>
+
+     </section>
+
+     <section>
+        <div>
+            <p>Features</p>
+            <h1>What I Do </h1>
+        </div>
+
+        <div>
+            <img src="" alt="">
+            <h2>SMM</h2>
+            <ul type="box">
+                <li>Facebook Marketing</li>
+                <li>Instagram Marketing</li>
+                <li>Pinterest Marketing</li>
+                <li>Linkedin Marketing</li>
+            </ul>
+        </div>
+               <div>
+            <img src="" alt="">
+            <h2>Lead Generation </h2>
+            <ul type="box">
+                <li>Data Entr</li>
+                <li>Web Scraping</li>
+                <li>Web Research</li>
+                <li>Linkedin Leads</li>
+            </ul>
+        </div>
+        <div>
+            <img src="" alt="">
+            <h2>SMM</h2>
+            <ul type="box">
+                <li>Facebook Marketing</li>
+                <li>Instagram Marketing</li>
+                <li>Pinterest Marketing</li>
+                <li>Linkedin Marketing</li>
+            </ul>
+        </div>
+
+
+
+
+     </section>
+
 </body>
 </html>
