--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: #000000;">
      <section> <!--1st section Header -->
         <div> 
             <Header>
@@ -20,10 +20,10 @@
         </div>
     
         <div>
-            <h3>Hello,i'm</h3> <br>
-            <h1 >Freelancer Shihab</h1>
-            <h3>Digital Marketer & Web Designer</h3>
-            <p>My name is Md. Shihab Hossen. I am a digital marketer And social media manager & Web designer. Data entry, Lead Generation, Email Marketing, WordPress, SEO(ON-Page & Off-Page), Amazon SEO, Expert.
+            <h3 style="color: hsl(0, 2%, 25%);">Hello,i'm</h3> <br>
+            <h1 style="color: #C9F31D;">Freelancer Shihab</h1>
+            <h3 style="color: aliceblue;">Digital Marketer & Web Designer</h3>
+            <p style="color: rgb(61, 58, 58);">My name is Md. Shihab Hossen. I am a digital marketer And social media manager & Web designer. Data entry, Lead Generation, Email Marketing, WordPress, SEO(ON-Page & Off-Page), Amazon SEO, Expert.
 
 </p>
         </div>
@@ -178,7 +178,7 @@
       <p>+88 0 1951073976</p>
       <p>mdshihabhossen.web@gmail.com</p>
     </div>
-    
+
    </section>
 
 
